SteveHorses OLD/Steve PRO OLD/logs/run_20250831_021848.log
  File "/Users/stephenjerome/Desktop/SteveHorsesPro/steve_horses_pro.py", line 268
    )
    ^
SyntaxError: f-string expression part cannot include a backslash
